fix: Blockstream logo on Firefox (#1398)

--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -259,22 +259,19 @@ h3 {
 }
 .blockstreamApp {
     position: relative;
-    padding-left: 64px;
+    padding-left: 62px;
     text-decoration: none;
     font-size: 18px;
     color: var(--color-text);
     font-weight: normal;
-    line-height: 1.6;
+    line-height: 1.15;
     display: inline-block;
-}
-.blockstreamApp br {
-    display: block;
-    margin-top: 6px;
 }
 .blockstreamApp span {
     display: block;
     text-align: left;
     font-weight: bold;
+    margin-top: 4px;
 }
 .helm {
     display: inline-block;
